Modified for WooCommerce

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,6 +38,7 @@
         "sass/modules/_clearings.scss",
         "sass/site/secondary/_widgets.scss",
         "sass/site/_site.scss",
+        "sass/woocommerce/_woocommerce.scss",
         "sass/modules/_infinite-scroll.scss",
         "sass/media/_media.scss",
         "sass/variables-site/_colors.scss",
@@ -56,6 +57,12 @@
         "sass/layout/_sidebar-content.scss",
         "sass/site/primary/_posts-and-pages.scss",
         "sass/site/primary/_comments.scss",
+        "sass/woocommerce/_tables.scss",
+        "sass/woocommerce/_products.scss",
+        "sass/woocommerce/_single-product.scss",
+        "sass/woocommerce/_checkout.scss",
+        "sass/woocommerce/_components.scss",
+        "sass/woocommerce/_widgets.scss",
         "sass/media/_captions.scss",
         "sass/media/_galleries.scss"
       ]
