Update front page template to WP standard

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -45,8 +45,7 @@
 	-->
 
 	<rule ref="WordPress">
-		<exclude name="WordPress.WP.EnqueuedResourceParameters.MissingVersion" />
-		<exclude name="Squiz.Commenting.FunctionComment.MissingParamTag" />
+		<!-- <exclude name="Squiz.Commenting.FunctionComment.MissingParamTag" /> -->
 	</rule>
 
 	<!--
